<resources>
    <string name="app_name">ISLE</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_skip">SKIP</string>
    <string name="skip_description">Skip signing up for now and start the app</string>
    <string name="prompt_password">Password</string>
    <string name="signup_method">Sign up with</string>
    <string name="reset_password">Reset</string>
    <string name="action_sign_up">SIGN UP USING YOUR EMAIL</string>
    <string name="action_sign_up_google">CONTINUE WITH GOOGLE</string>
    <string name="action_sign_up_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_map">MapActivity</string>
    <string name="action_settings">Settings</string>
    <string name="start_exploring">Start Exploring</string>
</resources>
